Css changes - cai

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <title>Warehouse Inventory</title>
   </head>
   <body>
-    <h1>
-      The Amazon Warehouse Bruna works at
+    <h1 id="logo">
+      The Amazon Warehouse Bruna works at 
     </h1>
     <div id="root"></div>
   </body>
