++few minor css changes.

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1 id="logo">
-      The Amazon Warehouse Bruna works at 
+      Inventory tracking
     </h1>
     <div id="root"></div>
   </body>
