Fixed css issue

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     />
     <title>Warehouse Inventory</title>
   </head>
-  <body >
+  <body class="dmodebody">
     <div id="root"></div>
   </body>
 
